[package]
name = "kumoko"
version = "0.3.0"
authors = ["BR03D"]
edition = "2021"
description = "A simple asynchronous server/client crate built on tokio for easy two-way streaming."
homepage = "forgor"
repository = "forgor"
license = "forgor"
keywords = ["netcode", "async", "server", "non-blocking", "full-duplex"]
categories = ["asynchronous", "concurrency", "network-programming"]
include = ["/src", "README.md"]
publish = false

[lib]

[features]
default = ["server", "client"]
client = []
server = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.1"
tokio = { version = "1.20", features = ["macros", "net", "rt-multi-thread", "sync"] }
#async-recursion = "1.0"

[[example]]
name = "server"
required-features = ["server"]

[[example]]
name="minimal_server"
required-features = ["server"]

[[example]]
name="minimal_client"
required-features = ["client"]

[[test]]
name="basic"
required-features = ["server", "client"]

[[test]]
name="many_clients"
required-features = ["server", "client"]