[package]
name = "kumoko"
version = "0.4.0"
authors = ["BR03D"]
edition = "2021"
description = "A simple asynchronous server/client crate built on tokio for easy two-way streaming."
repository = "https://github.com/BR03D/kumoko.git"
license = "MIT"
keywords = ["async", "server", "netcode", "full-duplex", "rpc"]
categories = ["asynchronous", "concurrency", "network-programming"]
include = ["/src", "/examples", "/tests", "README.md"]

[features]
default = ["full"]
broadcast = []
client = []
server = []
full = ["client", "server", "broadcast"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.1"
tokio = { version = "1.20", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[[example]]
name="minimal_server"
required-features = ["server"]

[[example]]
name="minimal_client"
required-features = ["client"]

[[test]]
name="basic"
required-features = ["server", "client"]

[[test]]
name="many_clients"
required-features = ["server", "client"]

[[test]]
name="events"
required-features = ["server", "client"]